syntax = "proto3";

package user;

option go_package = "pb";

message User {
    uint32 userID =1;
    string userName = 2;
    string userEmail =3 ;
    enum Gender{
        UNKNOWN=0;
        MALE =1;
        FEMALE = 2;
    }
    Gender gender = 4;
    uint32 age =5;
}